예외처리 모달창 수정

--- a/게시판/index.html
+++ b/게시판/index.html
@@ -48,6 +48,15 @@
         </div>
       </div>
     </div>
+
+    <!-- 컨텐츠 추가 예외 처리 -->
+    <div class="content-add-error hidden">
+      <div class="content-error-modal">
+        <button class="modal-cancle"><i class="fa-solid fa-xmark"></i></button>
+        <p class="content-add-confirm">제목이 적혀있지 않습니다.</p>
+          <button class="content-add-error-ok">확인</button>
+      </div>
+    </div>
   </div>
 </body>
 <script src="JS/main.js"></script>
