modal창 취소버튼 이벤트 추가

--- a/게시판/index.html
+++ b/게시판/index.html
@@ -36,19 +36,7 @@
           <button class="cancel-btn">취소</button>
         </div>
       </form>
-    </div>
-
-    <div class="modal-alert-display hidden">
-      <div class="alert-remove">
-        <button class="modal-cancle"><i class="fa-solid fa-xmark"></i></button>
-        <p class="remove-confirm">정말 삭제 하시겠습니까?</p>
-        <div class="remove-btn-wrap">
-          <button class="remove-agree">삭제</button>
-          <button class="remove-cancle">취소</button>
-        </div>
-      </div>
-    </div>
-
+      
     <!-- 컨텐츠 추가 예외 처리 -->
     <div class="content-add-error hidden">
       <div class="content-error-modal">
@@ -57,6 +45,19 @@
           <button class="content-add-error-ok">확인</button>
       </div>
     </div>
+    </div>
+
+    <div class="modal-alert-display hidden">
+      <div class="alert-remove">
+        <button class="modal-cancel"><i class="fa-solid fa-xmark"></i></button>
+        <p class="remove-confirm">정말 삭제 하시겠습니까?</p>
+        <div class="remove-btn-wrap">
+          <button class="remove-agree">삭제</button>
+          <button class="remove-cancel">취소</button>
+        </div>
+      </div>
+    </div>
+
   </div>
 </body>
 <script src="JS/main.js"></script>
