컨텐츠 추가 예외처리 모달창 스타일링 수정

--- a/게시판/index.html
+++ b/게시판/index.html
@@ -41,7 +41,7 @@
       <div class="content-add-error hidden">
         <div class="content-error-modal">
           <button class="modal-cancel"><i class="fa-solid fa-xmark"></i></button>
-          <p class="content-add-confirm">제목이 적혀있지 않습니다.</p>
+          <p class="content-add-confirm"></p>
             <button class="content-add-error-ok">확인</button>
         </div>
       </div>
