컨텐츠 모달창 스타일링 추가

--- a/게시판/index.html
+++ b/게시판/index.html
@@ -58,6 +58,17 @@
       </div>
     </div>
 
+    <div class="content-modal-background hidden">
+      <div class="content-modal">
+        <p class="content-modal-title">Title</p>
+        <div class="content-title">게시글 제목</div>
+        <p class="content-modal-content">Content</p>
+        <div class="content-contents"></div>
+        <div class="content-modal-btn-wrap">
+          <button class="content-modal-ok-btn">확인</button>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 <script src="JS/main.js"></script>
