modal창 띄우는 함수 수정필요

--- a/게시판/index.html
+++ b/게시판/index.html
@@ -61,7 +61,7 @@
     <div class="content-modal-background hidden">
       <div class="content-modal">
         <p class="content-modal-title">Title</p>
-        <div class="content-title">게시글 제목</div>
+        <div class="content-title"></div>
         <p class="content-modal-content">Content</p>
         <div class="content-contents"></div>
         <div class="content-modal-btn-wrap">
