--- a/게시판/index.html
+++ b/게시판/index.html
@@ -19,9 +19,16 @@
       <ul class="notify-wrap">
         
       </ul>
-      <div class="btn-wrap">
-        <button class="add-btn"><i class="fa-solid fa-plus"></i></button>
-        <button class="remove-btn"><i class="fa-solid fa-trash-can"></i></button>
+      <div class="content-wrap-footer">
+        <div class="pagination-wrap">
+          <div>&lt;</div>
+          <div class="pagination-num-wrap"><span class="pagination-num">1</span></div>
+          <div>&gt;</div>
+        </div>
+        <div class="btn-wrap">
+          <button class="add-btn"><i class="fa-solid fa-plus"></i></button>
+          <button class="remove-btn"><i class="fa-solid fa-trash-can"></i></button>
+        </div>
       </div>
     </div>
 
