--- a/게시판/index.html
+++ b/게시판/index.html
@@ -21,9 +21,9 @@
       </ul>
       <div class="content-wrap-footer">
         <div class="pagination-wrap">
-          <div>&lt;</div>
-          <div class="pagination-num-wrap"><span class="pagination-num">1</span></div>
-          <div>&gt;</div>
+          <div class="prev-btn">&lt;</div>
+          <div class="pagination-num-wrap"><span class="pagination-num">1 2 3 4 5 6 7 8 9 10 11 12 13 14</span></div>
+          <div class="next-btn">&gt;</div>
         </div>
         <div class="btn-wrap">
           <button class="add-btn"><i class="fa-solid fa-plus"></i></button>
