pagination styling finish

--- a/게시판/index.html
+++ b/게시판/index.html
@@ -22,7 +22,7 @@
       <div class="content-wrap-footer">
         <div class="pagination-wrap">
           <div class="prev-btn">&lt;</div>
-          <div class="pagination-num-wrap"><span class="pagination-num">1 2 3 4 5 6 7 8 9 10 11 12 13 14</span></div>
+          <div class="pagination-num-wrap"><span class="pagination-num">1 2 3 4 5 6</span></div>
           <div class="next-btn">&gt;</div>
         </div>
         <div class="btn-wrap">
