페이지네이션 스타일링, 기능 구현틀 작성

--- a/게시판/index.html
+++ b/게시판/index.html
@@ -22,7 +22,7 @@
       <div class="content-wrap-footer">
         <div class="pagination-wrap">
           <div class="prev-btn">&lt;</div>
-          <div class="pagination-num-wrap"><span class="pagination-num">1 2 3 4 5 6</span></div>
+          <div class="pagination-num-wrap"><span class="pagination-num">1</span></div>
           <div class="next-btn">&gt;</div>
         </div>
         <div class="btn-wrap">
@@ -80,4 +80,5 @@
 </body>
 <script src="JS/main.js"></script>
 <script src="JS/modal.js"></script>
+<script src="JS/pagination.js"></script>
 </html>
