체크박스, 삭제이벤트 페이지네이션에 추가필요

--- a/게시판/index.html
+++ b/게시판/index.html
@@ -21,9 +21,11 @@
       </ul>
       <div class="content-wrap-footer">
         <div class="pagination-wrap">
-          <div class="prev-btn">&lt;</div>
-          <div class="pagination-num-wrap"><span class="pagination-num">1</span></div>
-          <div class="next-btn">&gt;</div>
+          <div class="first-btn"><i class="fa-solid fa-angles-left"></i></div>
+          <div class="prev-btn"><i class="fa-solid fa-angle-left"></i></div>
+          <div class="pagination-num-wrap"><span class="pagination-num"></span></div>
+          <div class="next-btn"><i class="fa-solid fa-angle-right"></i></div>
+          <div class="last-btn"><i class="fa-solid fa-angles-right"></i></div>
         </div>
         <div class="btn-wrap">
           <button class="add-btn"><i class="fa-solid fa-plus"></i></button>
