아이콘 추가

--- a/clone/youtube/youtube.html
+++ b/clone/youtube/youtube.html
@@ -6,18 +6,19 @@
   <title>Youtube</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://kit.fontawesome.com/1ccb0a2168.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
     <h1>Youtube</h1>
     <div class="search-section">
       <input type="text">
-      <button class="search-enter"></button>
-      <button class="voice-search"></button>
+      <button class="search-enter"><i class="fa-solid fa-magnifying-glass"></i></button>
+      <button class="voice-search"><i class="fa-solid fa-microphone"></i></button>
     </div>
     <div class="icon-wrap">
-      <button class="add-video"></button>
-      <button class="notify"></button>
+      <button class="add-video"><i class="fa-solid fa-video"></i></button>
+      <button class="notify"><i class="fa-regular fa-bell"></i></button>
       <button class="profile"></button>
     </div>
   </header>
