스타일 수정 필요

--- a/clone-coding/반응형네비바/index.html
+++ b/clone-coding/반응형네비바/index.html
@@ -12,15 +12,15 @@
   <header class="blog-header">
     <div class="header-container">
       <div class="blog-logo">
-        <h1 class="logo-wrap"><a href="#" class="logo">Hyo</a></h1>
+        <a href="#" class="logo"><h1 class="logo-wrap">Hyo</h1></a>
       </div>
 
       <nav class="blog-nav">
         <ul class="nav-wrap">
-          <li class="nav-list"><a href="#"><span class="nav-content">Home</span></a></li>
-          <li class="nav-list"><a href="#"><span class="nav-content">About Me</span></a></li>
-          <li class="nav-list"><a href="#"><span class="nav-content">Project &amp; Skills</span></a></li>
-          <li class="nav-list"><a href="#"><span class="nav-content">Contact</span></a></li>
+          <a href="#" class="nav-link"><li class="nav-list"><span class="nav-content">Home</span></li></a>
+          <a href="#" class="nav-link"><li class="nav-list"><span class="nav-content">About Me</span></li></a>
+          <a href="#" class="nav-link"><li class="nav-list"><span class="nav-content">Project &amp; Skills</span></li></a>
+          <a href="#" class="nav-link"><li class="nav-list"><span class="nav-content">Contact</span></li></a>
         </ul>
       </nav>
       <div class="blog-icons-wrap">
@@ -29,5 +29,15 @@
       </div>
     </div>
   </header>
+
+  <!-- 메인 영역 -->
+  <main>
+
+  </main>
+
+  <!-- 푸터 영역 -->
+  <footer>
+
+  </footer>
 </body>
 </html>
