반응형 js 코드 추가 필요

--- a/clone-coding/반응형네비바/index.html
+++ b/clone-coding/반응형네비바/index.html
@@ -27,6 +27,8 @@
         <a href="https://github.com/Hyoddang" class="github"><img src="https://img.icons8.com/?size=100&id=3tC9EQumUAuq&format=png&color=000000" alt="github" class="github-site"></a>
         <a href="https://surf-reaction-33c.notion.site/5644d72c56fd4e0ab4d5b801e3687aa6?pvs=4" class="notion-blog"><img src="https://img.icons8.com/?size=100&id=nvtEH6DpqruC&format=png&color=000000" alt="notion-blog" class="notion"></a>
       </div>
+
+      <a href="#" class="nav-burger-bars"><i class="fa-solid fa-bars"></i></a>
     </div>
   </header>
 
@@ -40,4 +42,5 @@
 
   </footer>
 </body>
+<script src="js/main.js"></script>
 </html>
