--- a/clone-coding/반응형네비바/index.html
+++ b/clone-coding/반응형네비바/index.html
@@ -6,7 +6,12 @@
   <title>반응형 네비바</title>
   <link rel="stylesheet" href="css/navReset.css">
   <link rel="stylesheet" href="css/navStyle.css">
+
+  <!-- font awesome -->
   <script src="https://kit.fontawesome.com/1ccb0a2168.js" crossorigin="anonymous"></script>
+
+  <!-- google font -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=computer" />
 </head>
 <body>
   <header class="blog-header">
@@ -33,13 +38,19 @@
   </header>
 
   <!-- 메인 영역 -->
-  <main>
-
+  <main class="main">
+    <div class="main-wrap">
+      <h1 class="material-symbols-outlined">
+        computer
+      </h1>
+      <p class="typing-text">Welcome to my profile :)</p>
+      <a href="" class="main-link">About Me <i class="fa-solid fa-arrow-right"></i></span></a>
+    </div>
   </main>
 
   <!-- 푸터 영역 -->
   <footer>
-
+    
   </footer>
 </body>
 <script src="js/main.js" defer></script>
