home 화면 스타일링

--- a/clone-coding/반응형네비바/index.html
+++ b/clone-coding/반응형네비바/index.html
@@ -39,12 +39,16 @@
 
   <!-- 메인 영역 -->
   <main class="main">
-    <div class="main-wrap">
-      <h1 class="material-symbols-outlined">
-        computer
-      </h1>
-      <p class="typing-text">Welcome to my profile :)</p>
-      <a href="" class="main-link">About Me <i class="fa-solid fa-arrow-right"></i></span></a>
+    <div class="home-wrap">
+      <div class="home-content-wrap">
+        <h1>
+          <span class="material-symbols-outlined">
+          computer
+          </span>
+        </h1>
+        <p class="typing-text">Welcome to my profile :&#41;</p>
+        <p class="main-link-text"><a href="#" class="main-link">About Me <i class="fa-solid fa-arrow-right"></i></span></a></p>
+      </div>
     </div>
   </main>
 
