타이핑효과 스타일링, 자바스크립트 추가 예정

--- a/clone-coding/반응형네비바/index.html
+++ b/clone-coding/반응형네비바/index.html
@@ -46,8 +46,8 @@
           computer
           </span>
         </h1>
-        <p class="typing-text">Welcome to my profile :&#41;</p>
-        <p class="main-link-text"><a href="#" class="main-link">About Me <i class="fa-solid fa-arrow-right"></i></span></a></p>
+        <p class="typing-text" id="typing">Welcome to my profile :&#41;</p>
+        <p class="main-link-text"><a href="#" class="main-link">About Me <i class="fa-solid fa-arrow-right"></i></a></p>
       </div>
     </div>
   </main>
