--- a/clone-coding/반응형네비바/index.html
+++ b/clone-coding/반응형네비바/index.html
@@ -57,5 +57,6 @@
     
   </footer>
 </body>
-<script src="js/main.js" defer></script>
+<script src="js/main.js"></script>
+<script src="js/typing.js"></script>
 </html>
