--- a/clone-coding/반응형네비바/index.html
+++ b/clone-coding/반응형네비바/index.html
@@ -46,7 +46,7 @@
           computer
           </span>
         </h1>
-        <p class="typing-text" id="typing">Welcome to my profile :&#41;</p>
+        <p class="typing-text" id="typing"></p>
         <p class="main-link-text"><a href="#" class="main-link">About Me <i class="fa-solid fa-arrow-right"></i></a></p>
       </div>
     </div>
