sticky 스타일 수정 필요

--- a/clone-coding/반응형네비바/index.html
+++ b/clone-coding/반응형네비바/index.html
@@ -39,7 +39,7 @@
 
   <!-- 메인 영역 -->
   <main class="main">
-    <div class="home-wrap" id="home">
+    <section class="home-wrap" id="home">
       <div class="home-content-wrap">
         <h1>
           <span class="material-symbols-outlined">
@@ -49,22 +49,22 @@
         <p class="typing-text" id="typing"></p>
         <p class="main-link-text"><a href="#aboutMe" class="main-link">About Me<i class="fa-solid fa-arrow-right"></i></a></p>
       </div>
-    </div>
+    </section>
 
     <!-- 명함 방식으로 디자인 예정 -->
-    <div class="aboutMe-wrap" id="aboutMe">
+    <section class="aboutMe-wrap" id="aboutMe">
       <h1>안녕하세요ㅕ</h1>
-    </div>
+    </section>
 
     <!-- api 연동해서 디자인할 예정 -->
-    <div class="pj-sk-wrap" id="pj-sk">
+    <section class="pj-sk-wrap" id="pj-sk">
       <h1>안녕하세요ㅕ</h1>
-    </div>
+    </section>
 
     <!-- 연락처 디자인 구상 필요 -->
-    <div class="contact-wrap" id="contact">
+    <section class="contact-wrap" id="contact">
       <h1>안녕하세요ㅕ</h1>
-    </div>
+    </section>
   </main>
 
   <!-- 푸터 영역 -->
