carousel effect 틀 구현

--- a/clone-coding/서울아산병원/asan.html
+++ b/clone-coding/서울아산병원/asan.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>서울아산병원 클론코딩</title>
+  <link rel="stylesheet" href="css/asanStyle.css">
+  <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
   <header>
@@ -20,5 +22,21 @@
       </ul>
     </nav>
   </header>
+  <div class="carousel-wrap">
+    <div class="carousel">
+      
+      <div class="">
+        <ul class="carousel-list-wrap">
+          <li class="carousel-list"></li>
+          <li class="carousel-list"></li>
+          <li class="carousel-list"></li>
+          <li class="carousel-list"></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="search-wrap">
+    <input type="text" class="input">
+  </div>
 </body>
 </html>
