--- a/clone-coding/서울아산병원/asan.html
+++ b/clone-coding/서울아산병원/asan.html
@@ -6,19 +6,22 @@
   <title>서울아산병원 클론코딩</title>
   <link rel="stylesheet" href="css/asanStyle.css">
   <link rel="stylesheet" href="css/reset.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <nav>
+  <header class="header">
+    <nav class="nav-wrap">
       <h1 class="asan-logo"><a href="#"><img src="https://www.amc.seoul.kr/asan/images/common/logo.png" alt=""></a></h1>
       <ul class="asan-navWrap">
-        <li class="asan-navList"><a href="">의료진/진료과</a></li>
-        <li class="asan-navList"><a href="">진료예약/안내</a></li>
-        <li class="asan-navList"><a href="">건강정보</a></li>
-        <li class="asan-navList"><a href="">고객서비스</a></li>
-        <li class="asan-navList"><a href="">의학교육</a></li>
-        <li class="asan-navList"><a href="">병원이야기</a></li>
-        <li class="asan-navList"><a href="">병원소개</a></li>
+        <li class="asan-navList"><a href="#">의료진/진료과</a></li>
+        <li class="asan-navList"><a href="#">진료예약/안내</a></li>
+        <li class="asan-navList"><a href="#">건강정보</a></li>
+        <li class="asan-navList"><a href="#">고객서비스</a></li>
+        <li class="asan-navList"><a href="#">의학교육</a></li>
+        <li class="asan-navList"><a href="#">병원이야기</a></li>
+        <li class="asan-navList"><a href="#">병원소개</a></li>
       </ul>
     </nav>
   </header>
@@ -27,12 +30,13 @@
       
       <div class="">
         <ul class="carousel-list-wrap">
-          <li class="carousel-list"></li>
-          <li class="carousel-list"></li>
-          <li class="carousel-list"></li>
-          <li class="carousel-list"></li>
+          <div class="cell"><img src="img/pc_srt.png" alt="carousel img" class="cell-img"></div>
+          <div class="cell"><img src="" alt="carousel img" class="cell-img"></div>
+          <div class="cell"><img src="" alt="carousel img" class="cell-img"></div>
+          <div class="cell"><img src="" alt="carousel img" class="cell-img"></div>
         </ul>
       </div>
+
     </div>
   </div>
   <div class="search-wrap">
