--- a/clone-coding/서울아산병원/asan.html
+++ b/clone-coding/서울아산병원/asan.html
@@ -31,6 +31,7 @@
       <div class="">
         <ul class="carousel-list-wrap">
           <div class="cell"><img src="img/pc_srt.png" alt="carousel img" class="cell-img"></div>
+          <!-- 이미지 추가 -->
           <div class="cell"><img src="" alt="carousel img" class="cell-img"></div>
           <div class="cell"><img src="" alt="carousel img" class="cell-img"></div>
           <div class="cell"><img src="" alt="carousel img" class="cell-img"></div>
