--- a/clone-coding/서울아산병원/asan.html
+++ b/clone-coding/서울아산병원/asan.html
@@ -28,14 +28,13 @@
   <div class="carousel-wrap">
     <div class="carousel">
       
-      <div class="">
-        <ul class="carousel-list-wrap">
-          <div class="cell"><img src="img/pc_srt.png" alt="carousel img" class="cell-img"></div>
-          <!-- 이미지 추가 -->
-          <div class="cell"><img src="" alt="carousel img" class="cell-img"></div>
-          <div class="cell"><img src="" alt="carousel img" class="cell-img"></div>
-          <div class="cell"><img src="" alt="carousel img" class="cell-img"></div>
-        </ul>
+      <div class="carousel-list-wrap">
+        <div class="cell"><img src="img/pc_srt.png" alt="carousel img" class="cell-img">
+        <button class="detail-btn"></button></div>
+        <!-- 이미지 추가 -->
+        <div class="cell"><img src="" alt="carousel img" class="cell-img"></div>
+        <div class="cell"><img src="" alt="carousel img" class="cell-img"></div>
+        <div class="cell"><img src="" alt="carousel img" class="cell-img"></div>
       </div>
 
     </div>
