input 영역 스타일링

--- a/clone-coding/서울아산병원/asan.html
+++ b/clone-coding/서울아산병원/asan.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/1ccb0a2168.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header class="header">
@@ -39,8 +40,14 @@
 
     </div>
   </div>
-  <div class="search-wrap">
-    <input type="text" class="input">
+  <div class="search-section">
+    <div class="search-wrap">
+      <span class="search-text">통합검색</span>
+      <span class="input-wrap">
+        <input type="text" class="input" placeholder="검색어를 입력해주세요.">
+        <button class="search-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+      </span>
+    </div>
   </div>
 </body>
 </html>
