main service 영역 스타일링 필요

--- a/clone-coding/서울아산병원/asan.html
+++ b/clone-coding/서울아산병원/asan.html
@@ -31,7 +31,10 @@
       
       <div class="carousel-list-wrap">
         <div class="cell"><img src="img/pc_srt.png" alt="carousel img" class="cell-img">
-        <button class="detail-btn"></button></div>
+          <div class="btn-section">
+            <a href="#" class="detail"><button class="detail-btn">자세히 보기</button></a>
+          </div>
+        </div>
         <!-- 이미지 추가 -->
         <div class="cell"><img src="" alt="carousel img" class="cell-img"></div>
         <div class="cell"><img src="" alt="carousel img" class="cell-img"></div>
@@ -47,6 +50,13 @@
         <input type="text" class="input" placeholder="검색어를 입력해주세요.">
         <button class="search-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
       </span>
+    </div>
+  </div>
+
+  <div class="main-wrap">
+    <h1>주요 서비스</h1>
+    <div>
+
     </div>
   </div>
 </body>
