main service 영역 디자인 추가 보완 필요

--- a/clone-coding/서울아산병원/asan.html
+++ b/clone-coding/서울아산병원/asan.html
@@ -54,8 +54,15 @@
   </div>
 
   <div class="main-wrap">
-    <h1>주요 서비스</h1>
-    <div>
+    <h1 class="main-title">주요 서비스</h1>
+    <div class="service-wrap">
+      <ul class="service-list">
+        <li class="service-100"><a href="#">의료진 찾기</a></li>
+        <li class="service-101"><a href="#">진료과 찾기</a></li>
+        <li class="service-102"><a href="#">진료 예약</a></li>
+        <li class="service-103"><a href="#">첫방문 고객 예약 상담</a></li>
+        <li class="service-104"><a href="#">나의 차트</a></li>
+      </ul>
 
     </div>
   </div>
