print-wrap 수정 필요

--- a/clone-coding/서울아산병원/asan.html
+++ b/clone-coding/서울아산병원/asan.html
@@ -64,6 +64,13 @@
         <li class="service-104"><a href="#">나의 차트</a></li>
       </ul>
 
+      <div class="print-wrap">
+        <ul>
+          <li><a href="#" class="certification"><span>증명서(진단서, 소견서 등) 출력</span></a></li>
+          <li><a href="#" class="record"><span>의무기록 및 영상CD 발급</span></a></li>
+          <li><a href="#" class="consent"><span>동의서, 위임장 양식 다운로드</span></a></li>
+        </ul>
+      </div>
     </div>
   </div>
 </body>
