--- a/clone-coding/서울아산병원/asan.html
+++ b/clone-coding/서울아산병원/asan.html
@@ -12,64 +12,67 @@
   <script src="https://kit.fontawesome.com/1ccb0a2168.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header class="header">
-    <nav class="nav-wrap">
-      <h1 class="asan-logo"><a href="#"><img src="https://www.amc.seoul.kr/asan/images/common/logo.png" alt=""></a></h1>
-      <ul class="asan-navWrap">
-        <li class="asan-navList"><a href="#">의료진/진료과</a></li>
-        <li class="asan-navList"><a href="#">진료예약/안내</a></li>
-        <li class="asan-navList"><a href="#">건강정보</a></li>
-        <li class="asan-navList"><a href="#">고객서비스</a></li>
-        <li class="asan-navList"><a href="#">의학교육</a></li>
-        <li class="asan-navList"><a href="#">병원이야기</a></li>
-        <li class="asan-navList"><a href="#">병원소개</a></li>
-      </ul>
-    </nav>
-  </header>
-  <div class="carousel-wrap">
-    <div class="carousel">
-      
-      <div class="carousel-list-wrap">
-        <div class="cell"><img src="img/pc_srt.png" alt="carousel img" class="cell-img">
-          <div class="btn-section">
-            <a href="#" class="detail"><button class="detail-btn">자세히 보기</button></a>
-          </div>
-        </div>
-        <!-- 이미지 추가 -->
-        <div class="cell"><img src="" alt="carousel img" class="cell-img"></div>
-        <div class="cell"><img src="" alt="carousel img" class="cell-img"></div>
-        <div class="cell"><img src="" alt="carousel img" class="cell-img"></div>
-      </div>
-
-    </div>
-  </div>
-  <div class="search-section">
-    <div class="search-wrap">
-      <span class="search-text">통합검색</span>
-      <span class="input-wrap">
-        <input type="text" class="input" placeholder="검색어를 입력해주세요.">
-        <button class="search-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
-      </span>
-    </div>
-  </div>
-
-  <div class="main-wrap">
-    <h1 class="main-title">주요 서비스</h1>
-    <div class="service-wrap">
-      <ul class="service-list">
-        <li class="service-100"><a href="#">의료진 찾기</a></li>
-        <li class="service-101"><a href="#">진료과 찾기</a></li>
-        <li class="service-102"><a href="#">진료 예약</a></li>
-        <li class="service-103"><a href="#">첫방문 고객 예약 상담</a></li>
-        <li class="service-104"><a href="#">나의 차트</a></li>
-      </ul>
-
-      <div class="print-wrap">
-        <ul>
-          <li><a href="#" class="certification"><span>증명서(진단서, 소견서 등) 출력</span></a></li>
-          <li><a href="#" class="record"><span>의무기록 및 영상CD 발급</span></a></li>
-          <li><a href="#" class="consent"><span>동의서, 위임장 양식 다운로드</span></a></li>
+  <div class="full-wrap">
+    <header class="header">
+      <nav class="nav-wrap">
+        <h1 class="asan-logo"><a href="#"><img src="https://www.amc.seoul.kr/asan/images/common/logo.png" alt=""></a></h1>
+        <ul class="asan-navWrap">
+          <li class="asan-navList"><a href="#">의료진/진료과</a></li>
+          <li class="asan-navList"><a href="#">진료예약/안내</a></li>
+          <li class="asan-navList"><a href="#">건강정보</a></li>
+          <li class="asan-navList"><a href="#">고객서비스</a></li>
+          <li class="asan-navList"><a href="#">의학교육</a></li>
+          <li class="asan-navList"><a href="#">병원이야기</a></li>
+          <li class="asan-navList"><a href="#">병원소개</a></li>
         </ul>
+      </nav>
+    </header>
+    <div class="carousel-wrap">
+      <div class="carousel">
+        
+        <div class="carousel-list-wrap">
+          <div class="cell"><img src="img/pc_srt.png" alt="carousel img" class="cell-img">
+            <div class="btn-section">
+              <a href="#" class="detail"><button class="detail-btn">자세히 보기</button></a>
+            </div>
+          </div>
+          <!-- 이미지 추가 -->
+          <div class="cell"><img src="" alt="carousel img" class="cell-img"></div>
+          <div class="cell"><img src="" alt="carousel img" class="cell-img"></div>
+          <div class="cell"><img src="" alt="carousel img" class="cell-img"></div>
+        </div>
+
+      </div>
+    </div>
+    <div class="search-section">
+      <div class="search-wrap">
+        <span class="search-text">통합검색</span>
+        <span class="input-wrap">
+          <input type="text" class="input" placeholder="검색어를 입력해주세요.">
+          <button class="search-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </span>
+      </div>
+    </div>
+
+    <div class="main-wrap">
+      <h1 class="main-title">주요 서비스</h1>
+      <div class="service-wrap">
+        <ul class="service-list">
+          <li class="service-100"><a href="#">의료진 찾기</a></li>
+          <li class="service-101"><a href="#">진료과 찾기</a></li>
+          <li class="service-102"><a href="#">진료 예약</a></li>
+          <li class="service-103"><a href="#">첫방문 고객 예약 상담</a></li>
+          <li class="service-104"><a href="#">나의 차트</a></li>
+        </ul>
+
+        <div class="print-wrap">
+          <ul>
+            <!-- 이미지 추가 -->
+            <li><a href="#" class="certification"><span>증명서(진단서, 소견서 등) 출력</span></a></li>
+            <li><a href="#" class="record"><span>의무기록 및 영상CD 발급</span></a></li>
+            <li><a href="#" class="consent"><span>동의서, 위임장 양식 다운로드</span></a></li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
